--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,41 @@
 html {
-  font-family: 'Ubuntu Condensed', sans-serif;
+  font-family: "Ubuntu Condensed", sans-serif;
 }
 
 body {
   background-image: url("../images/starfield.png");
   color: #fff;
   text-align: center;
+  padding-top: 260px;
+  padding-bottom: 200px;
 }
 
 h1 {
-  filter: drop-shadow(2px 2px 10px rgba(255, 255, 255, .7));
+  filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, .7));
 }
 
 p {
-  filter: drop-shadow(2px 2px 10px rgba(255, 255, 255, .7));
+  filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, .7));
+}
+
+.btn {
+  text-decoration: none;
+  border: solid 3px #90ccc3;
+  color: #b4fff4;
+  background-color: transparent;
+}
+
+.btn:hover {
+  background: linear-gradient(to bottom, rgba(180, 255, 244, .2), rgba(255, 255, 255, .7));
+  text-decoration: none;
+  border: solid 3px #90ccc3;
+  color: #b4fff4;
+  background-color: transparent;
+}
+
+.btn:active {
+  transform: translate(0, .5em);
+  border: solid 3px #90ccc3;
+  background-color: transparent;
+  color: #b4fff4;
 }
